fix: gap in about

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -128,7 +128,7 @@ main {
 
 .hero {
   background-image: url("assets/img/img-compressed/bg-snow.png"), url("assets/img/img-compressed/bg-ball.png");
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 20px 20px 0 0;
@@ -138,7 +138,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 12px;
+  gap: 11px;
 }
 
 .section_subtitle {
@@ -206,6 +206,7 @@ main {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  gap: 20px;
   padding-left: 60px;
   color: var(--dark);
 }
